# safteawallet-py

./: .gitignore  LICENSE  README.md  SafeTeaWallet.sol  main.py  pyproject.toml
abis/: factory.json
safetea/: client.py  factory.py  models.py  owner_manager.py  utils.py  wallet.py
safetea/abis/: wallet.json
safteawallet_py/: __init__.py  client.py  erc20_manager.py  exceptions.py  factory.py  info_manager.py  models.py  transaction_manager.py  utils.py  wallet.py
safteawallet_py/aio/: __init__.py  client.py  erc20_manager.py  factory.py  info_manager.py  owner_manager.py  transaction_manager.py  wallet.py
tests/: test_aio_client.py  test_aio_erc20_manager.py  test_aio_factory.py  test_aio_wallet.py  test_erc20_manager.py  test_factory.py  test_models.py  test_wallet.py
