[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safteawallet-py"
version = "0.1.0"
description = "Python SDK for interacting with SafeTea Multi-Signature Wallets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=9.0.3",
    "web3>=7.0.0",
]

[tool.setuptools]
packages = ["safteawallet_py"]

[tool.setuptools.package-data]
safteawallet_py = ["abis/*.json"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
